chat 뒤로가기 버튼 추가 및 기타 모바일 템플릿 미세수정 마이페이지 모바일 하려다가 너무 졸려서 그냥 잘꺼

--- a/project/board/templates/board/post_detail.html
+++ b/project/board/templates/board/post_detail.html
@@ -25,7 +25,9 @@
                     </div>
                     <div class="board__header__right">
                         <ul class="board__buttons">
+                            <a href="{% url 'core:chat:chat' univ.url_name %}">
                             <li><img src="{% static "/svg/messege box.svg" %}"></li>
+                            </a>
                             <a href="{% url 'core:board:post_create' univ.url_name %}">
                                 <li><img id="h__post" src="{% static "/svg/post.svg" %}"></li>
                             </a>
