--- a/project/chat/static/chat/css/mobile_chat.css
+++ b/project/chat/static/chat/css/mobile_chat.css
@@ -132,6 +132,13 @@ hr{
     left: 1rem;
 }
 
+#back {
+    position: absolute;
+    top: 0.8rem;
+    left: 1rem;
+}
+}
+
 #hide {
     fill: transparent;
 }
