--- a/project/accounts/templates/accounts/mypage.html
+++ b/project/accounts/templates/accounts/mypage.html
@@ -1,8 +1,10 @@
 {% extends "login_base.html" %}
 {% load staticfiles %}
 {% block css %}
-    <link rel="stylesheet" href="{% static 'components/white-wrapper.css' %}">
-    <link rel="stylesheet" href="{% static 'accounts/css/mypage.css' %}">
+    <link rel="stylesheet" media="(min-width:768px)" href="{% static 'components/white-wrapper.css' %}">
+    <link rel="stylesheet" media="(min-width:768px)" href="{% static 'accounts/css/mypage.css' %}">
+    <link rel="stylesheet" media="(max-width:768px)" href="{% static "accounts/css/mypage_mobile.css" %}" type="text/css">
+
 {% endblock %}
 {% block contents %}
     <div class="container flex-container">
