--- a/project/board/templates/board/main_board.html
+++ b/project/board/templates/board/main_board.html
@@ -6,9 +6,9 @@
 
 
 {% block css %}
-    <link rel="stylesheet" media="(max-width:768px)"
+    <link rel="stylesheet" media="(max-width:767px)"
           href="{% static "board/css/board_header/board_header_mobile.css" %}" type="text/css">
-    <link rel="stylesheet" media="(max-width:768px)" href="{% static "board/css/board_post/board_post_mobile.css" %}"
+    <link rel="stylesheet" media="(max-width:767px)" href="{% static "board/css/board_post/board_post_mobile.css" %}"
           type="text/css">
     <link rel="stylesheet" media="(min-width:768px)" href="{% static "board/css/board_post/board_post_small.css" %}"
           type="text/css">
@@ -96,7 +96,8 @@
                         <li class="board__post__container">
                             <div class="board__post__like">
                                 <span id="post_{{ post.pk }}">{{ post.total_likes }}</span>
-                                <button type="button" class="like" name="{{ post.pk }}" value="Like">
+                                <button type="button" class="like" name="{{ post.pk }}" value="Like"
+                                        onclick="likePost({{ post.pk }})">
                                     {% if user in post.likes.all %}
                                         <img id="like_id_{{ post.pk }}" class='clicked'
                                              src="{% static "/svg/like-clicked.svg" %}"/>
@@ -305,7 +306,8 @@
                                             </div>
 
                                             <div class="s_con post__bottom__like">
-                                                <button type="button" class="like" name="{{ post.pk }}" value="Like">
+                                                <button type="button" class="like" name="{{ post.pk }}" value="Like"
+                                                        onclick="likePost({{ post.pk }})">
                                                     {% if user in post.likes.all %}
                                                         <img id="m_like_id_{{ post.pk }}" class='clicked'
                                                              src="{% static "/svg/like-clicked.svg" %}"/>
@@ -454,6 +456,7 @@
                             postFields.likes.length,
                             postPk,
                             postPk,
+                            postPk,
                             isClicked,
                             like_icon_will_use,
                             postFields.ctgy.name,
@@ -535,6 +538,55 @@
             })(user)
         });
 
+        function likePost(postPK) {
+            var pk = postPK;
+            var like_img = document.getElementById(`like_id_${pk}`);
+            var m_like_img = document.getElementById(`m_like_id_${pk}`);
+
+            // console.log(like_img.classList.contains('clicked'));
+            if (like_img) {
+              if (!(like_img.classList.contains('clicked'))) {
+                like_img.src = "/static/svg/like-clicked.svg";
+                like_img.setAttribute('class', 'clicked');
+              } else {
+                like_img.src = "/static/svg/like.svg";
+                like_img.removeAttribute('class', 'clicked');
+              }
+            }
+            if (m_like_img) {
+              if (!(m_like_img.classList.contains('clicked'))) {
+                  m_like_img.src = "/static/svg/like-clicked.svg";
+                  m_like_img.setAttribute('class', 'clicked');
+              } else {
+                  m_like_img.src = "/static/svg/like.svg";
+                  m_like_img.removeAttribute('class', 'clicked');
+              }
+            }
+
+
+            const univUrlName = "{{ univ.url_name }}";
+            const url = '{% url 'api:post_like' %}';
+            $.ajax({
+                type: 'POST',
+                url: url,
+                data: {
+                    'pk': postPK,
+                    'csrfmiddlewaretoken': '{{ csrf_token }}',
+                    url_name: univUrlName
+                },
+                datatype: "json",
+                success: function (response) {
+                    $(`#post_${response['pk']}`).text(response['likes_count']);
+                    $(`#m_post_${response['pk']}`).text(response['likes_count']);
+                },
+                error: function (request, status, error) {
+                    alert("code:" + request.status + "\n" + "message:" + request.responseText + "\n" + "error:" + error);
+                }
+            })
+        }
+
+
+/*
         $('.like').click(function () {
             var pk = $(this).attr('name')
             var like_img = document.getElementById(`like_id_${pk}`);
@@ -577,7 +629,7 @@
                 }
             })
         });
-
+*/
 
         $('.bookmark').click(function () {
             const url = '{% url 'api:post_bookmark' %}';
