--- a/project/board/templates/board/post_detail.html
+++ b/project/board/templates/board/post_detail.html
@@ -280,7 +280,7 @@
       window.location.href = "{% url 'core:chat:index' univ.url_name %}"
     })
     no_btn.addEventListener('click', e=>{
-      alert('함부로 신고하지마라임만')
+      alert('함부로 신고하지마라임마')
       modal.style.display='none';
       e.stopPropagation()
     })
