--- a/project/board/templates/board/post_new.html
+++ b/project/board/templates/board/post_new.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="board__header__right">
                         <ul class="board__buttons">
-                            <a href="{% url 'core:accounts:mypage' univ.url_name %}">
+                            <a href="{% url 'core:chat:index' univ.url_name %}">
                             <li><img src="{% static "/svg/messege box.svg" %}"></li>
                             </a>
                             <a href="{% url 'core:board:post_create' univ.url_name %}">
