--- a/project/templates/login_base.html
+++ b/project/templates/login_base.html
@@ -37,7 +37,7 @@
                 <div class="board__header__right pc__header">
                     <ul class="board__buttons">
                         <li><img src="{% static "/svg/alarm.svg" %}"></li>
-                        <a href="{% url 'core:chat:chat' univ.url_name %}">
+                        <a href="{% url 'core:chat:index' univ.url_name %}">
                             <li><img src="{% static "/svg/messege box.svg" %}"></li>
                         </a>
                         <a href="{% url 'core:accounts:mypage' univ.url_name %}">
