Revert "Merge pull request #57 from dlwodnjs724/front/mypage_mobile"
This reverts commit 20ddaf76c67aa23f8bd8e97539d0681a663b2619.

--- a/project/core/static/base/css/header.css
+++ b/project/core/static/base/css/header.css
@@ -8,7 +8,6 @@
     background-color: var(--main-color);
     margin-bottom: 1rem;
     position: sticky;
-    z-index: 2;
     top: 0px;
 }
 
@@ -25,7 +24,7 @@
     width: 30%;
 }
 
-.base__logo img {
+.base__logo object {
     width: 100%;
 }
 
