--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -15,9 +15,9 @@
 </head>
 
 <body>
-    <div class="base__header pc__header">
+    <div class="base__header">
         <div class="base__header__used-space container">
-            <div class="base__logo"><img src="{{ univ.logo.url }}"></div>
+            <div class="base__logo"><object type="image/svg+xml" data="{% static "/svg/logo-uf.svg" %}"></object></div>
             {% block header %}
             {% endblock %}
         </div>
@@ -27,8 +27,7 @@
     {% endblock %}
 
     <script src="https://cdn.jsdelivr.net/npm/sendbird@3.0.105/SendBird.min.js"></script>
-    <script src="{% static 'chat/js/API.js' %}"></script>
-    <script src="{% static 'chat/js/chatUtil.js' %}"></script>
+    <script src="{% static 'js/API.js' %}"></script>
     {% block javascript %}
     {% endblock %}
 </body>
