--- a/project/accounts/templates/registration/login.html
+++ b/project/accounts/templates/registration/login.html
@@ -1,10 +1,8 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block css %}
-    <link rel="stylesheet" media="(max-width:768px)" href="{% static "registration/css/login_mobile.css" %}" type="text/css">
-    <link rel="stylesheet" media="(min-width:768px)" href="{% static "registration/css/main.css" %}">
-    <link rel="stylesheet" media="(min-width:768px)" href="{% static "accounts/css/modal.css" %}">
-    <link rel="stylesheet" media="(max-width:768px)" href="{% static "accounts/css/signup_modal_mobile.css" %}" type="text/css">
+    <link rel="stylesheet" href="{% static "registration/css/main.css" %}">
+    <link rel="stylesheet" href="{% static "accounts/css/modal.css" %}">
 {% endblock %}
 
 
@@ -58,19 +56,17 @@
 
 {% block javascript %}
     <script>
-        var modal = document.querySelector(".signup-modal");
+        modal = document.querySelector(".signup-modal");
 
         signupModalOpen = (e) => {
             modal.style.display = "flex";
         };
 
         const sendMail = (univ) => {
-            var btn = document.querySelector(".signup-form__next-button");
-
-            btn.innerHTML = "Loading...";
-            var email = document.querySelector('input[name="email"]').value;
-
-            var req = new XMLHttpRequest();
+            btn = document.querySelector(".signup-form__next-button");
+            btn.innerHTML = "Loading..."
+            const req = new XMLHttpRequest();
+            email = document.querySelector('input[name="email"]').value;
             req.open("POST", "{% url "api:send_mail" %}");
             req.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
             req.send(`univ=${univ}&email=${email}`)
