--- a/project/board/static/board/css/board_post.css
+++ b/project/board/static/board/css/board_post.css
@@ -3,21 +3,10 @@
     flex-direction: row;
 }
 
-.board__pannel__top {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.pannel__top__state {
-    width: 300px;
-}
-
-.board__pannel__top a {
+.board__pannel__top a{
     text-decoration: none;
     width: auto;
-    margin-right: -10px;
+    margin-right:-10px;
 }
 
 .board__pannel__top img {
@@ -26,17 +15,14 @@
 
 .board__pannel__left {
     display: flex;
-    width: 80%;
-}
+    width: 911px;
 
-.board__pannel__left ul {
-    width: 100%;
 }
 
 .board__post__container {
     background-color: #ffffff;
     height: 201px;
-    width: 100%;
+    width: 911px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -52,10 +38,10 @@
     align-items: center;
     background-color: #e8e8e8;
     border-radius: 5px;
-    width: 7%;
+    width: 70px;
     height: 70px;
-    margin-left: 20px;
-    margin-right: 17px;
+    margin-left: 25px;
+    margin-right: 25px;
 }
 
 .board__post__like button {
@@ -68,12 +54,12 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 85%;
+    width: 100%;
     margin: 10px;
 }
 
 .post__text {
-    width: 70%;
+    width: 580px;
     display: flex;
     flex-direction: column;
 }
@@ -100,7 +86,7 @@
 }
 
 .board__pannel__right {
-    width: 20%;
+    width: 244px;
     margin-left: 20px;
     margin-top: 20px;
 }
@@ -142,7 +128,6 @@
 
 .post__mid__title a {
     color: #302d2c;
-    width:100%;
     text-decoration: none;
 }
 
@@ -156,7 +141,24 @@
     color: #a6a7a7;
     height: 60px;
 
-    word-break: break-all;
+    overflow: hidden;
+    /* overflow-wrap: break-word; */
+    text-overflow: ellipsis;
+    white-space: normal;
+    overflow-y: hidden;
+    /* display: -webkit-box;
+-webkit-line-clamp: 2;
+-webkit-box-orient: vertical; */
+    /* overflow-wrap: break-word ;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    word-wrap: break-word;
+    overflow-y: hidden;
+    white-space: nowrap; */
+
+
 }
 
 .post__text hr {
@@ -218,10 +220,11 @@
 }
 
 .pannel__right__create p {
-    font-size: 2rem;
+    font-size: 34px;
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
+    line-height: 1.21;
     text-align: left;
     color: #4fbcbd;
 }
@@ -238,19 +241,15 @@
 .pannel__right__category p {
     margin-top: 20px;
     margin-bottom: 20px;
-    font-size: 2rem;
+    font-size: 30px;
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
     color: #4fbcbd;
 }
 
-.right__category__list {
-    width: 90%
-}
-
 .right__category__list li {
-    width: 100%;
+    width: 217.4px;
     height: 43px;
     display: flex;
     align-items: center;
@@ -260,7 +259,7 @@
 }
 
 #category__a {
-    width: 100%;
+    width: 165px;
     overflow: hidden;
     text-overflow: ellipsis;
     text-align: center;
@@ -271,7 +270,7 @@
 }
 
 .c_common {
-    font-size: 19px;
+    font-size: 21px;
     font-weight: normal;
     font-style: normal;
 }
