landing page done

--- a/project/accounts/templates/registration/login.html
+++ b/project/accounts/templates/registration/login.html
@@ -23,7 +23,7 @@
                         <input class="user-info__button login-info" type="password" name="password" placeholder="PW"/>
                         <span style="color: red; font-size:0.8rem">{{ error }}</span>
                         <button class="user-info__button login-button" type="submit">Login</button>
-                        <button class="user-info__button forgot-button">Forgot your ID / Password? </button>
+{#                        <button class="user-info__button forgot-button">Forgot your ID / Password? </button>#}
                     </form>
                     <div class="accounts__newbiebox">
                         <button class="user-info__button newbie-button" onclick="signupModalOpen()">New to MY CAMPUS?</button>
