--- a/project/accounts/static/accounts/css/mypage_mobile.css
+++ b/project/accounts/static/accounts/css/mypage_mobile.css
@@ -12,7 +12,6 @@
 
 .mypage-wrapper {
     height: 100%;
-    padding: 2rem 1rem;
 }
 
 .mypage__my-profile {
@@ -59,7 +58,7 @@
     justify-content: center;
     color: #fff;
     font-weight: 900;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     background-color: var(--main-color);
     width:100%;
     height: 2rem;
@@ -84,7 +83,7 @@
 }
 
 .content__header {
-    font-size: 1.3rem;
+    font-size: 1rem;
     font-weight: 700;
 }
 
@@ -99,6 +98,22 @@
     background-color: #D2D2D2;
     border-radius: var(--border-radius);
     color: #fff;
-    font-size: 1.25rem;
+    font-size: 1rem;
     border:none;
+}
+
+.mypage__mobile__header {
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    height: 3rem;
+    background-color: #4fbcbd;
+    font-size: 1.5rem;
+    color: white;
+}
+
+#back {
+    position: absolute;
+    top: 0.8rem;
+    left: 1rem;
 }
