--- a/project/chat/templates/chat/index.html
+++ b/project/chat/templates/chat/index.html
@@ -89,6 +89,9 @@
 
     let flag = 'norm'
 
+    console.log("{{other}}")
+    console.log("{{type}}")
+
     chat_back.onclick = () => {
         if (chat_a.style.display == 'none'){
             chat_a.style.display = 'block';
