--- a/project/board/static/board/css/board_header/board_header_medium.css
+++ b/project/board/static/board/css/board_header/board_header_medium.css
@@ -64,3 +64,21 @@
     width: 18px;
 }
 
+#board__header__a{
+    text-decoration: none;
+    color:black;
+    width: 100%;
+    height: 2rem;
+    background-color: white;
+    border-radius: 5px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+}
+.board__header__login {
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
