add login_required(not decorator)

--- a/project/board/templates/board/post_detail.html
+++ b/project/board/templates/board/post_detail.html
@@ -261,7 +261,7 @@
       if(result){
         try{
             await openAChat("{{ post.author.username }}", flag)
-            window.location.href = `${window.location. origin}/${window.location.pathname.split("/")[1]}/chat`          
+            window.location.href = `${window.location. origin}/${window.location.pathname.split("/")[1]}/chat`
         }
         catch (e) {
           alert(e)
@@ -271,7 +271,7 @@
     msg_btn.addEventListener('click', e => {
       author.click()
     })
-    
+
     for (c in comment_profs) {
       (async (btn ,id) => {
         btn.addEventListener('click', async e=> {
@@ -281,7 +281,7 @@
           if(result){
             try{
                 await openAChat(id, flag)
-                window.location.href = `${window.location. origin}/${window.location.pathname.split("/")[1]}/chat`          
+                window.location.href = `${window.location. origin}/${window.location.pathname.split("/")[1]}/chat`
             }
             catch (e) {
               alert(e)
@@ -313,6 +313,10 @@
         },
         datatype: "json",
         success: function (response) {
+          if (response['univ_url']) {
+            location.href = "{% url 'core:accounts:login' 'univ_url' %}".replace('univ_url', response['univ_url']);
+            return;
+          }
         },
         error: function (request, status, error) {
           alert("code:" + request.status + "\n" + "message:" + request.responseText + "\n" + "error:" + error);
@@ -363,6 +367,10 @@
         },
         datatype: "json",
         success: function (response) {
+          if (response['univ_url']) {
+            location.href = "{% url 'core:accounts:login' 'univ_url' %}".replace('univ_url', response['univ_url']);
+            return;
+          }
           $(`#comment_${response['pk']}`).text(response['likes_count']);
         },
         error: function (request, status, error) {
@@ -501,7 +509,8 @@
       tempElem.setSelectionRange(0, 9999);
       document.execCommand("copy");
       document.body.removeChild(tempElem);
-    })
+      alert('URL successfully copied.')
+    });
 
       document.getElementById('h_click').onclick = () =>{
         console.log("helllo");
