mobile new hot 버튼 수정 drop scroll event 추가

--- a/project/board/static/board/css/board_header/board_header_mobile.css
+++ b/project/board/static/board/css/board_header/board_header_mobile.css
@@ -119,8 +119,11 @@
 }
 
 .header__logo {
+    display: flex;
+    justify-content: center;
     width: 40%;
 }
+
 
 .board__header__right {
     width: 25%;
