--- a/project/board/templates/board/post_detail.html
+++ b/project/board/templates/board/post_detail.html
@@ -66,15 +66,15 @@
       <div class="detail__post__container">
       <div id="myModal" class="modal">
               <div class="modal-content">
-                <span>&times;</span>
+                <span id ='xBtn'>&times;</span>
                 <img src="{% static '/svg/Anon.svg' %}" alt="">
                 <p></p>
-                <form action = "{% url 'core:chat:index' univ.url_name %}" method="post">
+                <form action = "{% url 'core:chat:index' univ.url_name %}" method="post" id="mdl_f">
                 {%csrf_token%}
                 <input type="hidden" id="other_v" name="other"> 
                 <input type="hidden" id="type_v" name="type"> 
-                <button type="submit" class="modal-button" id="yes">Send a message</button>
-                <button type="submit" class="modal-button" id="no">Report abuse</button>
+                <div class="modal-button" id="yes">Send a message</div>
+                <div class="modal-button" id="no">Report abuse</div>
                 </form>
                 </div>
             </div>
@@ -261,8 +261,10 @@
     });
     const author = document.getElementById('post__author')
     const msg_btn = document.getElementById('post__message')
+    const xBtn = document.getElementById('xBtn')
     const other_v = document.getElementById('other_v')
     const type_v = document.getElementById('type_v')
+    const mdl_f = document.getElementById('mdl_f')
     const modal = document.getElementById('myModal');
     const yes_btn = document.getElementById("yes")                                          
     const no_btn = document.getElementById("no")                                          
@@ -276,24 +278,26 @@
     {% endfor %}
     {% endfor %}
 
-
+    xBtn.addEventListener('click', e=>{
+      modal.style.display='none';
+    })
     author.addEventListener('click', e => {
-      type_v.value=('type', "{{post.is_anonymous}}" == "True" ? "anon" : "norm" )
-      other_v.value=('other',  "{{post.author.username}}")
+      String(type_v.value=('type', "{{post.is_anonymous}}" == "True" ? "anon" : "norm" ))
+      String(other_v.value=('other',  "{{post.author.username}}"))
       modal.querySelector('p').innerText = `wanna chat {{ post.name }}`
       modal.style.display = "block";
     })
     yes_btn.addEventListener('click', async e=>{
-      modal.style.display='none';
       try{
-        await openAChat(other_v.value,type_v.value )
+        await openAChat(other_v.value,type_v.value)
+        mdl_f.submit()
+      }
+      catch (_e) {
+        if(_e.message==1) mdl_f.submit()
+        else alert(_e) 
         e.stopPropagation()
       }
-      catch (err) {
-        console.log('err')
-        e.stopPropagation()
-      }
-      
+      modal.style.display='none';
     })
     no_btn.addEventListener('click', e=>{
       alert('함부로 신고하지마라임마')
