--- a/project/templates/login_base.html
+++ b/project/templates/login_base.html
@@ -51,7 +51,7 @@
                 {% else %}
                 <a href="{% url 'core:accounts:login' univ.url_name %}" id="board__header__a">
                     <div class="board__header__login">
-                        Log In / Sign Up
+                        LOG IN / SIGN UP
                     </div>
                 </a>
                 {% endif %}
