--- a/project/board/templates/board/main_board.html
+++ b/project/board/templates/board/main_board.html
@@ -167,9 +167,9 @@
                                 </div>
 
                                 <div class="post__image">
-                                    {% for img in post.images.all %}
-                                        <img src="{{ img.image_thumbnail.url }}" alt="">
-                                    {% endfor %}
+                                    <img src="{{ post.images.all.0.image_thumbnail.url }}" alt="">
+{#                                    {% for img in post.images.all %}#}
+{#                                    {% endfor %}#}
                                 </div>
                             </div>
                         </li>
@@ -192,7 +192,9 @@
             <div class="pannel__right__category">
                 <p>Category</p>
                 <ul class="right__category__list">
-                    <li class="c_d">+</li>
+                    <li class="c_d">
+                      <a href="{% url 'core:board:category_create' url_name %}" style="color: white;">+</a>
+                    </li>
                     {% for category in categories %}
                         <li class="{% cycle "c_a" "c_b" "c_c" "c_d" %}">
                             <a id="category__a"
