--- a/project/templates/400.html
+++ b/project/templates/400.html
@@ -1,10 +1,13 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <link rel="stylesheet" href="href="{% static "/css/error.css" %}" type="text/css">
 </head>
 <body>
-400 page 입니다.
-</body>
+  <p class="error-number">400</p>
+  <p class="error-message">Page Not Found</p></body>
 </html>
