scroll bar 수정 및 모바일 maincolor 추가

--- a/project/chat/static/chat/css/mobile_chat.css
+++ b/project/chat/static/chat/css/mobile_chat.css
@@ -264,7 +264,7 @@ hr{
     background-color: rgba(0, 0, 0, 0);
 }
 #chat-box_m::-webkit-scrollbar-thumb {
-    background-color: #383838;
+    background-color: transparent;
     height: 200px;
 }
 #chat-box_m::-webkit-scrollbar-button {
