--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -3,6 +3,8 @@
 <html lang="en">
 
 <head>
+    <meta name="theme-color" content="#4fbcbd" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#4fbcbd">
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
