--- a/project/accounts/templates/accounts/mypage.html
+++ b/project/accounts/templates/accounts/mypage.html
@@ -9,7 +9,7 @@
 {% block contents %}
     
     <div class="mobile__header mypage__mobile__header">
-    <img src="{% static "/svg/흰색.svg" %}" alt="" id="back">
+    <img src="{% static "/svg/side-arrow.svg" %}" alt="" id="back">
 
         <p>My Page</p>
     </div>
