--- a/project/chat/templates/chat/index.html
+++ b/project/chat/templates/chat/index.html
@@ -36,9 +36,9 @@
 </div>
 
 <div class="container chat-container mobile_chat">
-    <img src="{% static "/svg/흰색.svg" %}" alt="" id="chat_back">
+    <img src="{% static "/svg/side-arrow.svg" %}" alt="" id="chat_back">
     
-    <img src="{% static "/svg/흰색.svg" %}" alt="" id="back" style="display:none;">
+    <img src="{% static "/svg/side-arrow.svg" %}" alt="" id="back" style="display:none;">
 
         <div id="chat-list-container_m">
             <div id="chat-list-header_m">
