--- a/project/core/templates/core/main.html
+++ b/project/core/templates/core/main.html
@@ -18,7 +18,7 @@
         <div class="top__intro">Your University's</div>
         <div class="top__intro">Private Community</div>
         <div class="top__logo">
-          <img src="{% static 'svg/box logo.svg' %}" alt="">
+          <img src="{% static 'svg/box-logo.svg' %}" alt="">
         </div>
       </div>
       <div class="landing__right_bottom">
