--- a/project/core/templates/core/success.html
+++ b/project/core/templates/core/success.html
@@ -22,7 +22,7 @@
           </div>
           <div class="success__bottom">
             <div class="bottom_img">
-              <img src="{% static 'svg/box logo.svg' %}" alt="">
+              <img src="{% static 'svg/box-logo.svg' %}" alt="">
             </div>
             <div class="bottom_sentence">
               <div>
