--- a/project/templates/404.html
+++ b/project/templates/404.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="href="{% static "/css/error.css" %}" type="text/css">
 </head>
 <body>
-  <!-- <img src="{% static "/svg/box logo.svg" %}"> -->
+  <!-- <img src="{% static "/svg/box-logo.svg" %}"> -->
   <p class="error-number">404</p>
   <p class="error-message">Page Not Found</p>
 </body>
